Fix Bug 323717 - Creating a new category for a contact creates a duplicate entry when re-editing contact categories

FIXED-IN: 4.11.2
BUG: 323717